# dotenvguard

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dotenvguard/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
